force-app/main/default/objects/Xero_Private_Settngs__c/Xero_Private_Settngs__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Xero Private Settngs</label>
</CustomObject>