force-app/main/default/objects/Xero_Private_Settngs__c/fields/Access_Token_URL__c.field-meta.xml
<CustomField>
    <fullName>Access_Token_URL__c</fullName>
    <defaultValue>&quot;https://tutorssa--enritedev1.my.salesforce.com/servlet/servlet.ExternalRedirect?url=https%3A%2F%2Fidentity.xero.com%2Fconnect%2Ftoken&amp;&quot;</defaultValue>
    <label>Access Token URL</label>
    <type>Url</type>
</CustomField>