force-app/main/default/objects/Xero_Private_Settngs__c/fields/Callback_URL__c.field-meta.xml
<CustomField>
    <fullName>Callback_URL__c</fullName>
    <defaultValue>&quot;https://betterrehab--enritedev5.lightning.force.com/apex/callback&quot;</defaultValue>
    <label>Callback URL</label>
    <type>Url</type>
</CustomField>