force-app/main/default/objects/Xero_Private_Settngs__c/fields/Certificate_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Developer_Name__c</fullName>
    <label>Certificate Developer Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>