force-app/main/default/objects/Xero_Private_Settngs__c/fields/Connections_End_Point__c.field-meta.xml
<CustomField>
    <fullName>Connections_End_Point__c</fullName>
    <defaultValue>&quot;https://api.xero.com/connections&quot;</defaultValue>
    <label>Connections End Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>