force-app/main/default/objects/Xero_Private_Settngs__c/fields/Default_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Default_Account_Name__c</fullName>
    <defaultValue>&quot;Better Rehab Xero Account&quot;</defaultValue>
    <label>Default Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>