force-app/main/default/objects/Xero_Private_Settngs__c/fields/Log_In_URL__c.field-meta.xml
<CustomField>
    <fullName>Log_In_URL__c</fullName>
    <defaultValue>&quot;https://login.xero.com/identity/connect/authorize?response_type=code&amp;client_id=%7B0%7D&amp;redirect_uri=%7B1%7D&amp;scope=openid%20profile%20email%20accounting.transactions%20accounting.contacts%20offline_access&amp;&quot;</defaultValue>
    <label>Log In URL</label>
    <type>Url</type>
</CustomField>