force-app/main/default/objects/Xero_Private_Settngs__c/fields/Private_Key_2_0__c.field-meta.xml
<CustomField>
    <fullName>Private_Key_2_0__c</fullName>
    <label>Private Key 2.0</label>
    <length>255</length>
    <type>Text</type>
</CustomField>