force-app/main/default/objects/Xero_Private_Settngs__c/fields/Private_Key__c.field-meta.xml
<CustomField>
    <fullName>Private_Key__c</fullName>
    <label>Consumer Secret</label>
    <length>200</length>
    <type>Text</type>
</CustomField>