force-app/main/default/objects/Xero_Private_Settngs__c/fields/Public_Key_2_0__c.field-meta.xml
<CustomField>
    <fullName>Public_Key_2_0__c</fullName>
    <label>Public Key 2.0</label>
    <length>255</length>
    <type>Text</type>
</CustomField>