force-app/main/default/objects/Xero_Private_Settngs__c/fields/Public_Key__c.field-meta.xml
<CustomField>
    <fullName>Public_Key__c</fullName>
    <label>Consumer Key</label>
    <length>200</length>
    <type>Text</type>
</CustomField>